Change Bundle-RequiredExecutionEnvironment to JavaSE-11
Signed-off-by: frank buloup <frank.buloup@univ-amu.fr>